--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -16,6 +16,7 @@
 			<section class="section-1">
 
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nemo eos reiciendis laboriosam fugit incidunt, adipisci dolorem vero facere, delectus sit optio ad consectetur nulla odio sint blanditiis dolore laudantium?</p><br>
+				<p>The data is fetching from mapbox and darksky.net</p>
 			</section>
 			
 		</div>
